--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# spring.profiles.active=dev
+
+server.port=8080
+
+
+# 数据源
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql:///luckdraw_demo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+
+# mybatis配置
+mybatis.mapper-locations=classpath:mybatis/mapping/*.xml
+mybatis.type-aliases-package=com.luckdraw.demo.entity
 
